aws_stack.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  AppNode:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: SIG-DEVSECOPS-IB-EC2-ROLE
      InstanceType: t2.small
      ImageId: ami-0996d3051b72b5b2c
      KeyName: SIG-DEVSECOPS-IB-KEYPAIR
      SecurityGroups:
        - !Ref AppNodeSG
      UserData: !Base64 |
        #!/bin/bash
        apt-get update -qq
        apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common
        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
        add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
        apt-get update -qq
        apt-get install -y docker-ce docker-ce-cli containerd.io
        usermod -aG docker ubuntu
        apt-get update -qq
        apt-get -y install ruby
        apt-get -y install wget
        cd /home/ubuntu
        wget https://aws-codedeploy-us-east-2.s3.us-east-2.amazonaws.com/latest/install
        chmod +x ./install
        ./install auto > /tmp/logfile
        service codedeploy-agent start
        sudo curl -L "https://github.com/docker/compose/releases/download/1.28.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
        sudo chmod +x /usr/local/bin/docker-compose
        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
        unzip awscliv2.zip
        sudo ./aws/install
        mkdir /home/ubuntu/deploy
  AppNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: for the app nodes that allow ssh, http and docker ports
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '9090'
        ToPort: '9090'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '9091'
        ToPort: '9091'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
